Updates themshift plugin to latest version to fix casing issue, adds maker scripts for new components/icons/tokens

--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -95,6 +95,10 @@
   --themeshift-text-style-caption: 400 0.875rem/1.4 'Noto Sans Variable', 'Helvetica Neue', Arial, system-ui, sans-serif;
   --themeshift-text-style-subtitle: 500 1.125rem/1.45 'Noto Sans Variable', 'Helvetica Neue', Arial, system-ui, sans-serif;
 
+  /* Accessibility */
+  --themeshift-accessibility-focus-gap-width: 2px;
+  --themeshift-accessibility-focus-ring-width: 3px;
+
   /* Components */
   --themeshift-components-button-font: 'Noto Sans Variable', 'Helvetica Neue', Arial, system-ui, sans-serif;
   --themeshift-components-button-padding: 0 1rem;
@@ -105,8 +109,6 @@
   --themeshift-components-link-padding: 0 1rem;
 
   /* Other */
-  --themeshift-accessibility-focus-gap-width: 2px;
-  --themeshift-accessibility-focus-ring-width: 3px;
   --themeshift-base: {color.blueGrey.fg};
   --themeshift-grid-padding-large: 2rem;
   --themeshift-grid-padding-medium: 1rem;
@@ -121,6 +123,10 @@
 :root[data-theme='light'] {
   /* Typography */
   --themeshift-font-weight: 300;
+
+  /* Accessibility */
+  --themeshift-accessibility-focus-gap: #ffffff;
+  --themeshift-accessibility-focus-ring: #03a9f4;
 
   /* Theme */
   --themeshift-theme-surface-base: #eceff1;
@@ -145,13 +151,13 @@
   --themeshift-components-button-intents-secondary-surface: #bdbdbd;
   --themeshift-components-surface: transparent;
   --themeshift-components-text: dodgerblue;
-
-  /* Other */
-  --themeshift-accessibility-focus-gap: #ffffff;
-  --themeshift-accessibility-focus-ring: #03a9f4;
 }
 
 :root[data-theme='dark'] {
+  /* Accessibility */
+  --themeshift-accessibility-focus-gap: #ffffff;
+  --themeshift-accessibility-focus-ring: #3f51b5;
+
   /* Theme */
   --themeshift-theme-surface-base: #263238;
   --themeshift-theme-surface-raised: #37474f;
@@ -176,62 +182,4 @@
   --themeshift-components-button-intents-secondary-surface: #bdbdbd;
   --themeshift-components-surface: transparent;
   --themeshift-components-text: hotpink;
-
-  /* Other */
-  --themeshift-accessibility-focus-gap: #ffffff;
-  --themeshift-accessibility-focus-ring: #3f51b5;
-}
-
-:root[data-theme='print'] {
-    --themeshift-accessibility-focus-gap: #ffffff;
-    --themeshift-accessibility-focus-ring: #03a9f4;
-    --themeshift-components-button-intents-constructive-fg: #000000;
-    --themeshift-components-button-intents-constructive-hover: #81c784;
-    --themeshift-components-button-intents-constructive-pressed: #4caf50;
-    --themeshift-components-button-intents-constructive-surface: #66bb6a;
-    --themeshift-components-button-intents-destructive-fg: #000000;
-    --themeshift-components-button-intents-destructive-hover: #e57373;
-    --themeshift-components-button-intents-destructive-pressed: #f44336;
-    --themeshift-components-button-intents-destructive-surface: #ef5350;
-    --themeshift-components-button-intents-primary-fg: #ffffff;
-    --themeshift-components-button-intents-primary-hover: #4fc3f7;
-    --themeshift-components-button-intents-primary-pressed: #03a9f4;
-    --themeshift-components-button-intents-primary-surface: #29b6f6;
-    --themeshift-components-button-intents-secondary-fg: #000000;
-    --themeshift-components-button-intents-secondary-hover: #e0e0e0;
-    --themeshift-components-button-intents-secondary-pressed: #9e9e9e;
-    --themeshift-components-button-intents-secondary-surface: #bdbdbd;
-    --themeshift-components-surface: transparent;
-    --themeshift-components-text: dodgerblue;
-    --themeshift-font-weight: 300;
-    --themeshift-theme-surface-base: #eceff1;
-    --themeshift-theme-surface-raised: #cfd8dc;
-}
-
-@media print {
-  :root {
-    --themeshift-accessibility-focus-gap: #ffffff;
-    --themeshift-accessibility-focus-ring: #03a9f4;
-    --themeshift-components-button-intents-constructive-fg: #000000;
-    --themeshift-components-button-intents-constructive-hover: #81c784;
-    --themeshift-components-button-intents-constructive-pressed: #4caf50;
-    --themeshift-components-button-intents-constructive-surface: #66bb6a;
-    --themeshift-components-button-intents-destructive-fg: #000000;
-    --themeshift-components-button-intents-destructive-hover: #e57373;
-    --themeshift-components-button-intents-destructive-pressed: #f44336;
-    --themeshift-components-button-intents-destructive-surface: #ef5350;
-    --themeshift-components-button-intents-primary-fg: #ffffff;
-    --themeshift-components-button-intents-primary-hover: #4fc3f7;
-    --themeshift-components-button-intents-primary-pressed: #03a9f4;
-    --themeshift-components-button-intents-primary-surface: #29b6f6;
-    --themeshift-components-button-intents-secondary-fg: #000000;
-    --themeshift-components-button-intents-secondary-hover: #e0e0e0;
-    --themeshift-components-button-intents-secondary-pressed: #9e9e9e;
-    --themeshift-components-button-intents-secondary-surface: #bdbdbd;
-    --themeshift-components-surface: transparent;
-    --themeshift-components-text: dodgerblue;
-    --themeshift-font-weight: 300;
-    --themeshift-theme-surface-base: #eceff1;
-    --themeshift-theme-surface-raised: #cfd8dc;
-  }
 }
